--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-pdf": "^5.7.1",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-toastify": "^9.0.3"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
